--- a/experiments/Gaia/gaia_deconvolution.ipynb
+++ b/experiments/Gaia/gaia_deconvolution.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Normalizing Flow\n",
-    "We learn the galaxy phase space densities from gaia data with a Coupling Flow"
+    "# Deconvoling Gaia errors with Normalizing Flow\n"
    ]
   },
   {
@@ -98,7 +97,7 @@
     "import matplotlib.pyplot as plt \n",
     "\n",
     "from deconvolution.trainer.trainer import Trainer\n",
-    "from deconvolution.configs.gaia_configs import Gaia_Couplings_RQS_NormFlow as Configs\n",
+    "from deconvolution.configs.gaia_configs import Deconvolve_Gaia_Couplings_RQS_NormFlow as Configs\n",
     "\n",
     "configs = Configs(DATA = 'h277',\n",
     "                  FEATURES = ['x', 'y', 'z', 'vx', 'vy', 'vz'],\n",
@@ -117,7 +116,6 @@
     "                  PIN_MEMORY = True,\n",
     "                  DEVICE = 'cpu'\n",
     "                  )\n",
-    "\n",
     "#...set working directory for results:\n",
     "\n",
     "configs.set_workdir(path='../../results', save_config=True)\n",
